<resources>
    <string name="app_name">Poker Calculator</string>
    <!-- Strings used for fragments for navigation -->

    <string name="players_remaining">x%d</string>
    <string name="two_decimal_perc">%.2f%%</string>
    <string name="hands_perc">%.1f%%</string>
    <string name="flop">Flop</string>
    <string name="flop1">Flop1</string>
    <string name="flop2">Flop2</string>
    <string name="flop3">Flop3</string>
    <string name="turn">Turn</string>
    <string name="river">River</string>
    <string name="remove_player">X</string>

    <string name="player">Player %d</string>

    <string name="add_player">+ Player</string>
    <string name="clear">Clear</string>
    <string name="card1">Card1</string>
    <string name="card2">Card2</string>
    <string name="all_combinations_checked_result_is_exact">All combinations checked, result is exact.</string>
    <string name="checking_combinations">Checking combinations…</string>
    <string name="finished_checking_random_subset">Finished checking random subset.</string>
    <string name="checking_random_subset">Checking random subset…</string>
    <string name="done">Done</string>
    <string name="matrix_str">%s%s%s</string>
    <string name="_0_0">0.0%</string>
    <string name="suits">suits</string>
    <string name="select_a_hand_to_choose_suits">Select a hand to choose suits</string>
    <string name="choose_suits">Choose suits for the selected hand</string>
    <string name="equity">Equity</string>
    <string name="win">Win</string>
    <string name="tie">Tie</string>
    <string name="texas_hold_em_equity_calculator">Texas Hold\'em Equity Calculator</string>
    <string name="home">Menu</string>
    <string name="omaha_high_equity_calculator">Omaha High Equity Calculator</string>
    <string name="high_card">High Card</string>
    <string name="flush">Flush</string>
    <string name="one_pair">One Pair</string>
    <string name="full_house">Full House</string>
    <string name="two_pair">Two Pair</string>
    <string name="_4_of_a_kind">4 of a Kind</string>
    <string name="_3_of_a_kind">3 of a Kind</string>
    <string name="straight_flush">Straight Flush</string>
    <string name="straight">Straight</string>
    <string name="stats">Stats</string>
    <string name="range">Range</string>
    <string name="hand">Hand</string>
    <string name="saved_hand_range">Saved Hand-Range</string>
    <string name="save">Save</string>
    <string name="click_save_button_to_save_current_hand_range">Click \"Save\" button to save current Hand-Range for future use</string>
    <string name="unknown">Unknown</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="omaha_high_low_equity_calculator">Omaha Hi/Lo Equity Calculator</string>
    <string name="omaha_high_low_5_equity_calculator">Omaha Hi/Lo 5 Card Equity Calculator</string>
    <string name="omaha_high_5_card_equity_calculator">Omaha High 5 Card Equity Calculator</string>
    <string name="card_turn">CardTurn</string>
    <string name="card_river">CardRiver</string>
    <string name="player_rows">PlayerRows</string>
    <string name="omaha_high_6_card_equity_calculator">Omaha High 6 Card Equity Calculator</string>
    <string name="omaha_hi_lo_6_card_equity_calculator">Omaha Hi/Lo 6 Card Equity Calculator</string>
    <string name="texas_hold_em">Texas Hold\'em</string>
    <string name="omaha">Omaha</string>
    <string name="space"> </string>
    <string name="calculator_selector">Calculator Selector</string>
</resources>