<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/texas_holdem_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texas_hold_em"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/texas_holdem_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/texas_holdem_button"
        android:layout_width="match_parent"
        android:text="@string/texas_hold_em_equity_calculator"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/texas_holdem_text"
        app:layout_constraintBottom_toTopOf="@id/divider"
        style="@style/HomePageButtons" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/texas_holdem_button"
        app:layout_constraintBottom_toTopOf="@id/omaha_text" />

    <TextView
        android:id="@+id/omaha_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/omaha"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/omaha_high_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_high_button"
        android:layout_width="match_parent"
        android:text="@string/omaha_high_equity_calculator"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/omaha_text"
        app:layout_constraintBottom_toTopOf="@id/omaha_hi_lo_button"
        style="@style/HomePageButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_hi_lo_button"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/omaha_high_button"
        app:layout_constraintBottom_toTopOf="@id/omaha_hi_5_button"
        android:text="@string/omaha_high_low_equity_calculator"
        android:textSize="19sp"
        style="@style/HomePageButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_hi_5_button"
        android:layout_width="match_parent"
        android:text="@string/omaha_high_5_card_equity_calculator"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/omaha_hi_lo_button"
        app:layout_constraintBottom_toTopOf="@id/omaha_hi_lo_5_button"
        style="@style/HomePageButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_hi_lo_5_button"
        android:layout_width="match_parent"
        android:text="@string/omaha_high_low_5_equity_calculator"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/omaha_hi_5_button"
        app:layout_constraintBottom_toTopOf="@id/omaha_hi_6_button"
        style="@style/HomePageButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_hi_6_button"
        android:layout_width="match_parent"
        android:text="@string/omaha_high_6_card_equity_calculator"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/omaha_hi_lo_5_button"
        app:layout_constraintBottom_toTopOf="@id/omaha_hi_lo_6_button"
        style="@style/HomePageButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/omaha_hi_lo_6_button"
        android:layout_width="match_parent"
        android:text="@string/omaha_hi_lo_6_card_equity_calculator"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/omaha_hi_6_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/HomePageButtons" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>