<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/high_card_text"
        android:text="@string/high_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/high_card"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/high_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/high_card_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/flush_text"
        android:text="@string/flush"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline_3"
        app:layout_constraintRight_toLeftOf="@id/flush"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/flush"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flush_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_4"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/one_pair_text"
        android:text="@string/one_pair"
        app:layout_constraintTop_toBottomOf="@id/high_card_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/one_pair"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/one_pair"
        app:layout_constraintTop_toBottomOf="@id/high_card"
        app:layout_constraintLeft_toRightOf="@id/one_pair_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/full_house_text"
        android:text="@string/full_house"
        app:layout_constraintTop_toBottomOf="@id/flush_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_3"
        app:layout_constraintRight_toLeftOf="@id/full_house"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/full_house"
        app:layout_constraintTop_toBottomOf="@id/flush"
        app:layout_constraintLeft_toRightOf="@id/full_house_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_4"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/two_pair_text"
        android:text="@string/two_pair"
        app:layout_constraintTop_toBottomOf="@id/one_pair_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/two_pair"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/two_pair"
        app:layout_constraintTop_toBottomOf="@id/one_pair"
        app:layout_constraintLeft_toRightOf="@id/two_pair_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/four_of_a_kind_text"
        android:text="@string/_4_of_a_kind"
        app:layout_constraintTop_toBottomOf="@id/full_house_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_3"
        app:layout_constraintRight_toLeftOf="@id/four_of_a_kind"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/four_of_a_kind"
        app:layout_constraintTop_toBottomOf="@id/full_house"
        app:layout_constraintLeft_toRightOf="@id/four_of_a_kind_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_4"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/three_of_a_kind_text"
        android:text="@string/_3_of_a_kind"
        app:layout_constraintTop_toBottomOf="@id/two_pair_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/three_of_a_kind"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/three_of_a_kind"
        app:layout_constraintTop_toBottomOf="@id/two_pair"
        app:layout_constraintLeft_toRightOf="@id/three_of_a_kind_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/straight_flush_text"
        android:text="@string/straight_flush"
        app:layout_constraintTop_toBottomOf="@id/four_of_a_kind_text"
        app:layout_constraintBottom_toTopOf="@id/straight_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_3"
        app:layout_constraintRight_toLeftOf="@id/straight_flush"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/straight_flush"
        app:layout_constraintTop_toBottomOf="@id/four_of_a_kind"
        app:layout_constraintLeft_toRightOf="@id/straight_flush_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_4"
        style="@style/StatsValue"/>

    <TextView
        android:id="@+id/straight_text"
        android:text="@string/straight"
        app:layout_constraintTop_toBottomOf="@id/three_of_a_kind_text"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/straight"
        style="@style/StatsName"/>

    <TextView
        android:id="@+id/straight"
        app:layout_constraintTop_toBottomOf="@id/three_of_a_kind"
        app:layout_constraintLeft_toRightOf="@id/straight_text"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        style="@style/StatsValue"/>

</androidx.constraintlayout.widget.ConstraintLayout>