<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <LinearLayout
        android:id="@+id/top_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:text="@string/flop"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#696969" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/flop1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/unknown_button"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/flop1" />

                    <ImageButton
                        android:id="@+id/flop2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/unknown_button"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/flop2" />

                    <ImageButton
                        android:id="@+id/flop3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/unknown_button"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/flop3" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1">

                <TextView
                    android:text="@string/turn"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#696969" />

                <ImageButton
                    android:id="@+id/turn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/unknown_button"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/turn" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/river"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#696969" />

                <ImageButton
                    android:id="@+id/river"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/unknown_button"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/river" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/playersremaining"
            android:textSize="26sp"
            android:text="@string/players_remaining"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="4dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_row"
        android:layout_above="@+id/bottom_bar">

        <LinearLayout
            android:id="@+id/player_rows"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/addplayer"
            app:autoSizeTextType="uniform"
            android:text="@string/add_player"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clear"
            app:autoSizeTextType="uniform"
            android:text="@string/clear"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>