<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_marginTop="13dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/player_text"
            android:text="@string/player"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#696969" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/unknown_button"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card1"
                android:padding="5dp" />

            <ImageButton
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/unknown_button"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card2"
                android:padding="5dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/win"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/win_perc_empty"
            app:autoSizeTextType="uniform"
            android:layout_weight="1" />

        <Button
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_player"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

</LinearLayout>
