<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/hide_card_selector_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_cards" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculator_selector_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconTint="#928E95"
        app:boxBackgroundColor="#1A1B1E"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/calculator_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texas_hold_em_equity_calculator"
            android:textSize="18sp"
            android:textColor="@color/button_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/flop1"
        style="@style/SelectCardButton"
        android:contentDescription="@string/flop1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/flop2"
        app:layout_constraintTop_toBottomOf="@id/calculator_selector_layout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/flop2"
        style="@style/SelectCardButton"
        android:contentDescription="@string/flop2"
        app:layout_constraintLeft_toRightOf="@id/flop1"
        app:layout_constraintRight_toLeftOf="@id/flop3"
        app:layout_constraintTop_toBottomOf="@id/calculator_selector_layout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/flop3"
        style="@style/SelectCardButton"
        android:contentDescription="@string/flop3"
        app:layout_constraintLeft_toRightOf="@id/flop2"
        app:layout_constraintRight_toLeftOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/calculator_selector_layout" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/turn"
        style="@style/SelectCardButton"
        android:contentDescription="@string/card_turn"
        app:layout_constraintLeft_toRightOf="@id/guideline_1"
        app:layout_constraintRight_toLeftOf="@id/guideline_2"
        app:layout_constraintTop_toBottomOf="@id/calculator_selector_layout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/river"
        style="@style/SelectCardButton"
        android:contentDescription="@string/card_river"
        app:layout_constraintLeft_toRightOf="@id/guideline_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculator_selector_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/player_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/flop1"
        app:layout_constraintBottom_toTopOf="@id/res_desc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/res_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/player_list"
        app:layout_constraintBottom_toTopOf="@id/addplayer" />

    <Space
        android:id="@+id/playerremaining_spacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/addplayer"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/playersremaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_remaining"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/button_content"
        android:gravity="bottom"
        app:drawableStartCompat="@drawable/baseline_person_35"
        app:drawableTint="@color/button_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/addplayer"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addplayer"
        android:layout_width="0dp"
        android:layout_marginHorizontal="1dp"
        android:contentDescription="@string/add_player"
        app:icon="@drawable/baseline_person_add_35"
        app:layout_constraintLeft_toRightOf="@id/playerremaining_spacer"
        app:layout_constraintRight_toLeftOf="@id/clear"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards"
        style="@style/BorderedIconButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_marginHorizontal="1dp"
        android:contentDescription="@string/clear"
        app:icon="@drawable/outline_refresh_35"
        app:layout_constraintLeft_toRightOf="@id/addplayer"
        app:layout_constraintRight_toLeftOf="@id/button_unknown_spacer"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards"
        style="@style/BorderedIconButton" />

    <Space
        android:id="@+id/button_unknown_spacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/clear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/button_unknown"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/unknown_button"
        android:scaleType="fitCenter"
        android:padding="1dp"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        app:layout_constraintLeft_toRightOf="@id/clear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res_desc"
        app:layout_constraintBottom_toTopOf="@id/input_cards"
        android:contentDescription="@string/unknown" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button_unknown_spacer,button_unknown"
        android:id="@+id/button_unknown_group" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.24" >

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
